# thought-experiment-generator

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
data/: vocab_objects.txt  vocab_properties.txt  vocab_relationships.txt
data/cache/16a7c22227c4f599/: 001-experiment-criticize.json  001-experiment.txt  (+43 more)
data/prompts/: answer_questions.md  ask.md  ask_consolidate.md  candidate_problems.md  comparative_evaluate.md  conjecture_summary.md  consistency_check.md  deduplicate.md  explanatory_reach.md  generate_output.md  generate_questions.md  mind_system.md  novelty_check.md  promote_conjecture.md  resistance_to_refutation.md  review_assess.md  summarize_output.md
data/state/: review.md  state.json
docs/: epistemic-engine-spec.md  journal.md  llms-as-universal-explainer.md  problem-to-fix.md  reaction-to-vishal-misra-transcript.md  rust-implementation.md  thought-experiment-generator-design-doc.md
memory/: MEMORY.md  feedback_no_empirical_grounding.md  project_novelty_ranking.md
src/: ask.rs  cache.rs  config.rs  evaluator.rs  lib.rs  main.rs  novelty.rs  promoter.rs  prompts.rs  review.rs  runner.rs  state.rs  trajectory.rs  types.rs
src/engine/: background_init.rs  branch_runner.rs  mod.rs  root_generator.rs  tree_runner.rs
src/llm/: client.rs  mod.rs  parser.rs  prompts.rs
src/pipeline/: coherence_filter.rs  cross_pollination.rs  deutsch_scorer.rs  mod.rs  quad_extractor.rs  te_generator.rs  tension_extractor.rs  trajectory_scorer.rs
src/types/: branch.rs  draw_pool.rs  mod.rs  node.rs  quad.rs  scores.rs  tension.rs  tree.rs
src/vocab/: mod.rs
(+2816 files in other folders)
